taking input as well

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                 </div>
                 <div class="row mb-3"> <!-- Display -->
                     <div class="col-12">
-                        <input type="text" class="form-control form-control-lg text-right" id="display" readonly
-                            placeholder="0" />
+                        <input type="text" class="form-control form-control-lg text-right" id="display" />
                     </div>
                 </div>
                 <div class="row mb-3"> <!-- Clear and division -->
@@ -51,7 +50,7 @@
                         <button class="btn btn-outline-secondary btn-lg w-100" data-value="9">9</button>
                     </div>
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="*">*</button>
+                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="*">×</button>
                         <!-- Multiplication -->
                     </div>
                 </div>
