--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="row mb-3"> <!-- Display -->
                     <div class="col-12">
-                        <input type="text" class="form-control form-control-lg text-right" id="display" />
+                        <input type="text" class="form-control form-control-lg text-right" id="display" value="" />
                     </div>
                 </div>
                 <div class="row mb-3"> <!-- Clear and division -->
