--- a/index.html
+++ b/index.html
@@ -35,64 +35,64 @@
                         <!-- Clear takes 3 columns -->
                     </div>
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="/">÷</button>
+                        <button class="btn btn-outline-secondary key key-circle btn-lg w-100" data-value="/">÷</button>
                         <!-- Division sign -->
                     </div>
                 </div>
                 <div class="row mb-2"> <!-- Keypad rows -->
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="7">7</button>
+                        <button class="btn btn-outline-secondary key key-sq btn-lg w-100" data-value="7">7</button>
                     </div>
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="8">8</button>
+                        <button class="btn btn-outline-secondary key key-sq btn-lg w-100" data-value="8">8</button>
                     </div>
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="9">9</button>
+                        <button class="btn btn-outline-secondary key key-sq btn-lg w-100" data-value="9">9</button>
                     </div>
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="*">×</button>
+                        <button class="btn btn-outline-secondary key key-circle btn-lg w-100" data-value="*">×</button>
                         <!-- Multiplication -->
                     </div>
                 </div>
                 <div class="row mb-2"> <!-- Second row of numbers and subtraction -->
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="4">4</button>
+                        <button class="btn btn-outline-secondary key key-sq btn-lg w-100" data-value="4">4</button>
                     </div>
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="5">5</button>
+                        <button class="btn btn-outline-secondary key key-sq btn-lg w-100" data-value="5">5</button>
                     </div>
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="6">6</button>
+                        <button class="btn btn-outline-secondary key key-sq btn-lg w-100" data-value="6">6</button>
                     </div>
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="-">-</button>
+                        <button class="btn btn-outline-secondary key key-circle btn-lg w-100" data-value="-">-</button>
                         <!-- Subtraction -->
                     </div>
                 </div>
                 <div class="row mb-2"> <!-- Third row of numbers and addition -->
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="1">1</button>
+                        <button class="btn btn-outline-secondary key key-sq btn-lg w-100" data-value="1">1</button>
                     </div>
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="2">2</button>
+                        <button class="btn btn-outline-secondary key key-sq btn-lg w-100" data-value="2">2</button>
                     </div>
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="3">3</button>
+                        <button class="btn btn-outline-secondary key key-sq btn-lg w-100" data-value="3">3</button>
                     </div>
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="+">+</button>
+                        <button class="btn btn-outline-secondary key key-circle btn-lg w-100" data-value="+">+</button>
                         <!-- Addition -->
                     </div>
                 </div>
                 <div class="row"> <!-- Last row with 0, decimal, and equals -->
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value="0">0</button>
+                        <button class="btn btn-outline-secondary key key-sq btn-lg w-100" data-value="0">0</button>
                     </div>
                     <div class="col-3">
-                        <button class="btn btn-outline-secondary btn-lg w-100" data-value=".">.</button>
+                        <button class="btn btn-outline-secondary key key-sq btn-lg w-100" data-value=".">.</button>
                     </div>
                     <div class="col-6 d-flex justify-content-end"> <!-- Ensure equals spans 2 columns -->
-                        <button class="btn btn-primary btn-lg w-100" id="equals">=</button>
+                        <button class="btn btn-primary key btn-lg w-100" id="equals">=</button>
                         <!-- Equals spans 2 columns -->
                     </div>
                 </div>
