some more fixes

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         crossorigin="anonymous"></script>
 
     <!-- JavaScript for calculator functionality -->
-    <script src="./dist/index.js"></script>
+    <script src="./dist/calculator.js"></script>
 </body>
 
 </html>
